# yadro_testtask

./: .gitignore  CMakeLists.txt  README.md
include/: Channel.hpp  Common.hpp  Decoder.hpp  Encoder.hpp  utils.hpp
src/: Channel.cpp  Decoder.cpp  Encoder.cpp  main.cpp
